--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -3,29 +3,18 @@ channels:
     - conda-forge
     - defaults
 dependencies:
-    - coveralls
-    - cython
-    - ephem
-    - ipython
-    - matplotlib
-    - netcdf4
-    - nose
-    - numba
-    - numpy
-    - pandas
-    - pip
-    - pytables  # tables when using pip+PyPI
-    - pytest
-    - pytest-cov
-    - pytest-mock
-    - pytest-timeout
     - python=3.6
-    - pytz
-    - requests
+    - numpy=1.14.2
     - scipy
-    - shapely  # pvfactors dependency
-    - siphon  # conda-forge
-    - sphinx
-    - sphinx_rtd_theme
-    - pip:
-        - pvfactors==1.0.1
+    - pytables
+    - pandas=0.22.0
+    - pytz
+    - ephem
+    - numba
+    - ipython=6.3
+    - matplotlib=2.2.2
+    - siphon=0.7.0
+    - sphinx=1.7.2
+    - netCDF4=1.3.1
+    - hdf4=4.2.12
+    - sphinx_rtd_theme
