--- a/ci/requirements-py35-min.yml
+++ b/ci/requirements-py35-min.yml
@@ -4,8 +4,8 @@ channels:
 dependencies:
     - coveralls
     - nose
-    - numpy=1.10.1
-    - pandas=0.18.0
+    - numpy
+    - pandas
     - pip
     - pytest
     - pytest-cov
