use pip for py35-min numpy/pandas (#748)
* use pip for min numpy/pandas

* bump ci versions

* document minor min version bumps

--- a/ci/requirements-py35-min.yml
+++ b/ci/requirements-py35-min.yml
@@ -4,8 +4,6 @@ channels:
 dependencies:
     - coveralls
     - nose
-    - numpy=1.10.1
-    - pandas=0.18.0
     - pip
     - pytest
     - pytest-cov
@@ -14,3 +12,6 @@ dependencies:
     - python=3.5
     - pytz
     - requests
+    - pip:
+        - numpy==1.10.4
+        - pandas==0.18.1
