Revert "Remove pandas and numpy version reqs"
This reverts commit 84d718949289c82d6d3e1eb7b0b0fa05c413adf0.

--- a/ci/requirements-py35-min.yml
+++ b/ci/requirements-py35-min.yml
@@ -4,8 +4,8 @@ channels:
 dependencies:
     - coveralls
     - nose
-    - numpy
-    - pandas
+    - numpy=1.10.1
+    - pandas=0.18.0
     - pip
     - pytest
     - pytest-cov
