--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ jobs:
   - script: |
       pip install pytest pytest-cov pytest-azurepipelines
       pip install -e .
-      pytest tests --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+      pytest pvlib --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
     displayName: 'Test with pytest'
 
   - task: PublishTestResults@2
