--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,14 +6,12 @@ trigger:
 
 jobs:
 
-- job: 'Test_bare_linux'
+- job: 'Test_bare_macos'
 
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'macOS-10.13'
   strategy:
     matrix:
-      Python35:
-        python.version: '3.5'
       Python36:
         python.version: '3.6'
       Python37:
@@ -21,26 +19,52 @@ jobs:
 
   steps:
   - task: UsePythonVersion@0
+    displayName: 'Use Python $(python.version)'
     inputs:
       versionSpec: '$(python.version)'
 
-  - script: |
-      pip install pytest pytest-cov pytest-mock pytest-timeout pytest-azurepipelines
-      pip install -e .
-      pytest pvlib --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
-    displayName: 'Test with pytest'
+  - script: pip install tox
+    displayName: 'Install Tox'
 
-  - task: PublishTestResults@2
-    condition: succeededOrFailed()
-    inputs:
-      testResultsFiles: '**/test-*.xml'
-      testRunTitle: 'Publish test results for Python $(python.version)'
+  - script: tox -e py
+    displayName: 'Run Tox'
 
-  - task: PublishCodeCoverageResults@1
-    inputs:
-      codeCoverageTool: Cobertura
-      summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.xml'
-      reportDirectory: '$(System.DefaultWorkingDirectory)/**/htmlcov'
+
+# - job: 'Test_bare_macos'
+
+#   pool:
+#     vmImage: 'macOS-10.13'
+#   strategy:
+#     matrix:
+#       Python35:
+#         python.version: '3.5'
+#       Python36:
+#         python.version: '3.6'
+#       Python37:
+#         python.version: '3.7'
+
+#   steps:
+#   - task: UsePythonVersion@0
+#     inputs:
+#       versionSpec: '$(python.version)'
+
+#   - script: |
+#       pip install pytest pytest-cov pytest-mock pytest-timeout pytest-azurepipelines
+#       pip install -e .
+#       pytest pvlib --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+#     displayName: 'Test with pytest'
+
+#   - task: PublishTestResults@2
+    # condition: succeededOrFailed()
+    # inputs:
+    #   testResultsFiles: '**/test-*.xml'
+    #   testRunTitle: 'Publish test results for Python $(python.version)'
+
+  # - task: PublishCodeCoverageResults@1
+    # inputs:
+    #   codeCoverageTool: Cobertura
+    #   summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.xml'
+    #   reportDirectory: '$(System.DefaultWorkingDirectory)/**/htmlcov'
 
 
 - job: 'Test_conda_linux'
