add docs auto_examples to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ pvlib/spa_c_files/spa_tester.c
 # generated documentation
 docs/sphinx/source/generated
 docs/sphinx/source/savefig
+docs/sphinx/source/auto_examples
 
 # Installer logs
 pip-log.txt
