--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,11 +31,8 @@ jobs:
   #   displayName: 'Test with pytest'
 
   - script: |
-      source activate pandas-dev
       # Next we should simply have `doc/make.py --warnings-are-errors`, everything else is required because the ipython directive doesn't fail the build on errors (https://github.com/ipython/ipython/issues/11547)
-      doc/make.py --warnings-are-errors | tee sphinx.log ; SPHINX_RET=${PIPESTATUS[0]}
-      grep -B1 "^<<<-------------------------------------------------------------------------$" sphinx.log ; IPY_RET=$(( $? != 1 ))
-      exit $(( $SPHINX_RET + $IPY_RET ))
+      sphinx-build -b html source build
     displayName: 'Build documentation'
 
   # - task: PublishTestResults@2
