--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,6 @@ jobs:
     vmImage: 'ubuntu-16.04'
   strategy:
     matrix:
-      Python35:
-        python.version: '3.5'
-      Python36:
-        python.version: '3.6'
       Python37:
         python.version: '3.7'
 
@@ -32,6 +28,7 @@ jobs:
 
   - script: |
       # Next we should simply have `doc/make.py --warnings-are-errors`, everything else is required because the ipython directive doesn't fail the build on errors (https://github.com/ipython/ipython/issues/11547)
+      pip install -e ".[doc]"
       sphinx-build -b html source build
     displayName: 'Build documentation'
 
