--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ jobs:
   - script: |
       # Next we should simply have `doc/make.py --warnings-are-errors`, everything else is required because the ipython directive doesn't fail the build on errors (https://github.com/ipython/ipython/issues/11547)
       pip install -e ".[doc]"
-      sphinx-build -b html source build
+      sphinx-build -b html docs/sphinx/source docs/sphinx/build
     displayName: 'Build documentation'
 
   # - task: PublishTestResults@2
