--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,8 +2,7 @@
 
 trigger:
 - master
-variables:
-  NREL_API_KEY: $(NREL_API_KEY) # secret variable mapping from Pipeline to test env
+
 
 jobs:
 
@@ -26,10 +25,14 @@ jobs:
       versionSpec: '$(python.version)'
 
   - script: |
+      export NREL_API_KEY=$(NREL_API_KEY)
       pip install pytest pytest-cov pytest-mock pytest-timeout pytest-azurepipelines
       pip install -e .
       pytest pvlib --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
     displayName: 'Test with pytest'
+
+  env:
+    NREL_API_KEY: $(NREL_API_KEY)
 
   - task: PublishTestResults@2
     condition: succeededOrFailed()
@@ -43,7 +46,7 @@ jobs:
       summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.xml'
       reportDirectory: '$(System.DefaultWorkingDirectory)/**/htmlcov'
 
-
+  
 # - job: 'Test_conda_linux'
 
 #   pool:
