--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,6 @@ jobs:
     vmImage: 'ubuntu-16.04'
   strategy:
     matrix:
-      Python35:
-        python.version: '3.5'
-      Python36:
-        python.version: '3.6'
       Python37:
         python.version: '3.7'
 
@@ -25,26 +21,11 @@ jobs:
       versionSpec: '$(python.version)'
 
   - script: |
-      export NREL_API_KEY=$(NREL_API_KEY)
-      pip install pytest pytest-cov pytest-mock pytest-timeout pytest-azurepipelines
-      pip install -e .
-      pytest pvlib --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
-    displayName: 'Test with pytest'
+      echo "below is a test of the nrel api key"
+      echo $(NREL_API_KEY)
+      
+    displayName: 'print env variable'
 
-  env:
-    NREL_API_KEY: $(NREL_API_KEY)
-
-  - task: PublishTestResults@2
-    condition: succeededOrFailed()
-    inputs:
-      testResultsFiles: '**/test-*.xml'
-      testRunTitle: 'Publish test results for Python $(python.version)'
-
-  - task: PublishCodeCoverageResults@1
-    inputs:
-      codeCoverageTool: Cobertura
-      summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.xml'
-      reportDirectory: '$(System.DefaultWorkingDirectory)/**/htmlcov'
 
   
 # - job: 'Test_conda_linux'
