Update azure-pipelines.yml for Azure Pipelines all os.environ

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,11 +23,11 @@ jobs:
   - script: |
       echo "below is a test of the nrel api key"
       echo $(NREL_API_KEY)
-      python -c "import os; print(os.environ['NREL_API_KEY'])"
+      python -c "import os; print(os.environ)"
     displayName: 'print env variable'
 
 
-  
+
 # - job: 'Test_conda_linux'
 
 #   pool:
