--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,9 +23,9 @@ jobs:
   - script: |
       export nrelapikey=$(NREL_API_KEY)
       python -c "import os; print(os.environ['nrelapikey'])"
-      pip install pytest-cov pytest-mock pytest-timeout pytest-azurepipelines
+      pip install pytest pytest-cov pytest-mock pytest-timeout pytest-azurepipelines
       pip install -e .
-
+      pytest pvlib/tests/iotools/test_psm3.py  --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
     displayName: 'Test with pytest'
 
 
