Update azure-pipelines.yml for Azure Pipelines all python versions

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,10 @@ jobs:
     vmImage: 'ubuntu-16.04'
   strategy:
     matrix:
+      Python35:
+        python.version: '3.5'
+      Python36:
+        python.version: '3.6'
       Python37:
         python.version: '3.7'
 
