pin pysam version to 1.2.1

--- a/ci/requirements-py35.yml
+++ b/ci/requirements-py35.yml
@@ -26,5 +26,5 @@ dependencies:
     - siphon  # conda-forge
     - statsmodels
     - pip:
-        - nrel-pysam
+        - nrel-pysam==1.2.1
         - pvfactors==1.0.1
