pysam to current version, patch over numpy 1.14 change

--- a/ci/requirements-py35.yml
+++ b/ci/requirements-py35.yml
@@ -26,5 +26,5 @@ dependencies:
     - siphon  # conda-forge
     - statsmodels
     - pip:
-        - nrel-pysam==1.2.1
+        - nrel-pysam
         - pvfactors==1.0.1
