--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,8 +21,7 @@ jobs:
       versionSpec: '$(python.version)'
 
   - script: |
-      export nrelapikey=$(NREL_API_KEY)
-      python -c "import os; print(os.environ['nrelapikey'])"
+      export NREL_API_KEY=$(nrel_api_key)
       pip install pytest pytest-cov pytest-mock pytest-timeout pytest-azurepipelines
       pip install -e .
       pytest pvlib --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
