--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ jobs:
       versionSpec: '$(python.version)'
 
   - script: |
-      export NREL_API_KEY=$(nrel_api_key)
+      export NREL_API_KEY=$(nrelApiKey)
       pip install pytest pytest-cov pytest-mock pytest-timeout pytest-azurepipelines
       pip install -e .
       pytest pvlib/tests/iotools/test_psm3.py  --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
