--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,10 +25,10 @@ jobs:
       versionSpec: '$(python.version)'
 
   - script: |
-      export NREL_API_KEY=$(nrelApiKey)
       pip install pytest pytest-cov pytest-mock pytest-timeout pytest-azurepipelines
       pip install -e .
-      pytest pvlib/tests/iotools/test_psm3.py  --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+      export NREL_API_KEY=$(nrelApiKey)
+      pytest pvlib --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
     displayName: 'Test with pytest'
 
   - task: PublishTestResults@2
@@ -75,6 +75,7 @@ jobs:
     displayName: 'List installed dependencies'
   - script: |
       source activate test_env
+      export NREL_API_KEY=$(nrelApiKey)
       pytest pvlib --junitxml=junit/test-results.xml --cov --cov-report=xml --cov-report=html
     displayName: 'pytest'
   # - script: |
@@ -127,6 +128,7 @@ jobs:
     displayName: 'List installed dependencies'
   - script: |
       call activate test_env
+      export NREL_API_KEY=$(nrelApiKey)
       pytest pvlib --junitxml=junit/test-results.xml
     displayName: 'pytest'
   - task: PublishTestResults@2
@@ -156,6 +158,7 @@ jobs:
   - script: |
       pip install pytest pytest-cov pytest-mock pytest-timeout pytest-azurepipelines
       pip install -e .
+      export NREL_API_KEY=$(nrelApiKey)
       pytest pvlib --junitxml=junit/test-results.xml --cov=pvlib --cov-report=xml --cov-report=html
     displayName: 'Test with pytest'
 
