--- a/ci/requirements-py37.yml
+++ b/ci/requirements-py37.yml
@@ -24,5 +24,5 @@ dependencies:
     - shapely  # pvfactors dependency
     - siphon  # conda-forge
     - pip:
-        - nrel-pysam
+        - nrel-pysam>=2.0
         - pvfactors==1.0.1
