--- a/ci/requirements-py35-min.yml
+++ b/ci/requirements-py35-min.yml
@@ -9,6 +9,7 @@ dependencies:
     - pytest-cov
     - pytest-mock
     - pytest-timeout
+    - pytest-rerunfailures
     - python=3.5
     - pytz
     - requests
