--- a/ci/requirements-py36.yml
+++ b/ci/requirements-py36.yml
@@ -16,6 +16,7 @@ dependencies:
     - pytest
     - pytest-cov
     - pytest-mock
+    - pytest-rerunfailures
     - pytest-timeout
     - python=3.6
     - pytz
