--- a/ci/requirements-py37.yml
+++ b/ci/requirements-py37.yml
@@ -17,6 +17,7 @@ dependencies:
     - pytest-cov
     - pytest-mock
     - pytest-timeout
+    - pytest-rerunfailures
     - python=3.7
     - pytz
     - requests
