--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,10 @@ jobs:
     vmImage: 'ubuntu-16.04'
   strategy:
     matrix:
-      Python35:
-        python.version: '3.5'
-      Python36:
-        python.version: '3.6'
+      # Python35:
+      #   python.version: '3.5'
+      # Python36:
+      #   python.version: '3.6'
       Python37:
         python.version: '3.7'
 
@@ -27,7 +27,7 @@ jobs:
   - script: |
       pip install pytest pytest-cov pytest-mock pytest-timeout pytest-azurepipelines
       pip install -e .
-      export NREL_API_KEY=$(api_key)
+      export NREL_API_KEY=$(secret.api_key)
       echo "This is the key: $NREL_API_KEY"
       pytest pvlib --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
     displayName: 'Test with pytest'
