--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,9 +27,9 @@ jobs:
   - script: |
       pip install pytest pytest-cov pytest-mock pytest-timeout pytest-azurepipelines
       pip install -e .
-      export NREL_API_KEY=$(secret.api_key)
+      export NREL_API_KEY=$(api_key)
       echo "This is the key: $NREL_API_KEY"
-      pytest pvlib --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+      pytest pvlib/tests/iotools/test_psm3.py --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
     displayName: 'Test with pytest'
 
   - task: PublishTestResults@2
