--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,9 @@ jobs:
   - script: |
       pip install pytest pytest-cov pytest-mock pytest-timeout pytest-azurepipelines
       pip install -e .
+      export PRINT_ME=$(not_secret)
+      echo "print me: $PRINT_ME"
+      echo "direct print $(not_secret)"
       export NREL_API_KEY=$(api_key)
       echo "This is the key: $NREL_API_KEY"
       pytest pvlib/tests/iotools/test_psm3.py --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
