--- a/ci/requirements-py35-min.yml
+++ b/ci/requirements-py35-min.yml
@@ -9,10 +9,10 @@ dependencies:
     - pytest-cov
     - pytest-mock
     - pytest-timeout
-    - pytest-rerunfailures
     - python=3.5
     - pytz
     - requests
     - pip:
         - numpy==1.12.0
         - pandas==0.18.1
+        - pytest-rerunfailures # conda version is >3.6
