make test_psm3.py robust to API overuse errors (#873)
* use NREL_API_KEY environment variable when available

* remove try-except clause to ensure that azure env variable is used

* set environment variable from Azure's secret variables

* Update azure-pipelines.yml for Azure Pipelines

* Update azure-pipelines.yml for Azure Pipelines within pytest call

* Update azure-pipelines.yml for Azure Pipelines echo only

* Update azure-pipelines.yml for Azure Pipelines with python

* Update azure-pipelines.yml for Azure Pipelines all os.environ

* Update azure-pipelines.yml for Azure Pipelines export variable

* export Azure secret variable into environment to access from python

* Update azure-pipelines.yml for Azure Pipelines fix displayName

* Update azure-pipelines.yml for Azure Pipelines psm3 test only

* Update azure-pipelines.yml for Azure Pipelines for real this time

* Update azure-pipelines.yml for Azure Pipelines for really real this time

* Update azure-pipelines.yml for Azure Pipelines single failing test

* Update azure-pipelines.yml for Azure Pipelines test_get_psm3_tmy

* Update azure-pipelines.yml for Azure Pipelines io_input

* Update azure-pipelines.yml for Azure Pipelines test_parse_psm3

* Update azure-pipelines.yml for Azure Pipelines test_read_psm3

* Update azure-pipelines.yml for Azure Pipelines all test_psm3.py tests

* Update azure-pipelines.yml for Azure Pipelines all python versions

* use NREL_API_KEY environment variable when available

* remove try-except clause to ensure that azure env variable is used

* set environment variable from Azure's secret variables

* Update azure-pipelines.yml for Azure Pipelines

* Update azure-pipelines.yml for Azure Pipelines within pytest call

* Update azure-pipelines.yml for Azure Pipelines echo only

* Update azure-pipelines.yml for Azure Pipelines with python

* Update azure-pipelines.yml for Azure Pipelines all os.environ

* Update azure-pipelines

--- a/ci/requirements-py35.yml
+++ b/ci/requirements-py35.yml
@@ -26,3 +26,4 @@ dependencies:
     - pip:
         - nrel-pysam>=2.0
         - pvfactors==1.0.1
+        - pytest-rerunfailures # conda version is >3.6
