--- a/ci/requirements-py35-min.yml
+++ b/ci/requirements-py35-min.yml
@@ -15,3 +15,4 @@ dependencies:
     - pip:
         - numpy==1.12.0
         - pandas==0.18.1
+        - pytest-rerunfailures # conda version is >3.6
