--- a/ci/requirements-py35-min.yml
+++ b/ci/requirements-py35-min.yml
@@ -8,6 +8,7 @@ dependencies:
     - pytest
     - pytest-cov
     - pytest-mock
+    - pytest-remotedata
     - pytest-timeout
     - python=3.5
     - pytz
