--- a/ci/requirements-py35-min.yml
+++ b/ci/requirements-py35-min.yml
@@ -8,7 +8,6 @@ dependencies:
     - pytest
     - pytest-cov
     - pytest-mock
-    - pytest-remotedata
     - pytest-timeout
     - python=3.5
     - pytz
@@ -17,4 +16,4 @@ dependencies:
         - numpy==1.12.0
         - pandas==0.18.1
         - pytest-rerunfailures # conda version is >3.6
-        - pytest-remotedata # needs > 0.3.1
+        - pytest-remotedata # conda package is 0.3.0, needs > 0.3.1
