Use pytest remotedata (#896)
* enable pytest_remotedata for psm3

* add pytest_remotedata to test_pvgis.py

* add @pytest.mark.remote_data to other network dependent tests

* use up-to-date numpy, pandas

* install netcdf4 from pip instead of conda

* install pytest-remotedata from pip for conda 3.5

* readd @network to test_midc.py

* add pytest-remotedata to py35-min for travis

* add to what's new

* point coverage at run with --remote-data

* add --remote-data to travis run for coveralls to pickup

* Revert "point coverage at run with --remote-data"

This reverts commit e73eeb02db17f930c1958c219d2bdf38b557c726.

* Update docs/sphinx/source/whatsnew/v0.7.2.rst

Co-Authored-By: Will Holmgren <william.holmgren@gmail.com>

* Update docs/sphinx/source/whatsnew/v0.7.2.rst

Co-Authored-By: Will Holmgren <william.holmgren@gmail.com>

* Revert "install netcdf4 from pip instead of conda"

This reverts commit 6fa8ecfa89a829c9a81fec566b2f5e97b9ecda38.

* fix linelength in what's new

* add pytest-remotedata to Azure MacOS

* move --remote-data tests to conda_linux

* add remote_data decorators to tests requiring network

* only install pytest-remotedata from pip, explain

* fix tests directory name and url

* document use of --remote-data flag in Contributing>Testing

Co-authored-by: Will Holmgren <william.holmgren@gmail.com>

--- a/ci/requirements-py35.yml
+++ b/ci/requirements-py35.yml
@@ -27,3 +27,4 @@ dependencies:
         - nrel-pysam>=2.0
         - pvfactors==1.0.1
         - pytest-rerunfailures # conda version is >3.6
+        - pytest-remotedata # needs > 0.3.1
