fix doc -> docs

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,6 @@ jobs:
     displayName: Replicate readthedocs CI environment
   - script: |
       source activate test_env
-      cd doc/sphinx/
+      cd docs/sphinx/
       sphinx-build -W --keep-going -j auto -b html -d _build/doctrees source build
     displayName: Build HTML docs
