--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,7 @@ jobs:
       source activate test_env
       # Replicate the exact environment created by the readthedocs CI
       conda install --yes --quiet -c pkgs/main mock pillow sphinx sphinx_rtd_theme
+      pip install -e .
     displayName: Replicate readthedocs CI environment
   - script: |
       source activate test_env
