--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -200,6 +200,9 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.8'
   - script: |
       # Replicate the exact environment created by the readthedocs CI
       pip install -e .[all]
