BLD: build docs on Azure Pipelines (#909)
* try building docs on Azure Pipelines

* add doc.yml conda env file

* specify conda env name

* fix doc -> docs

* include sphinx-gallery

* add pytest to env

* install library to run sphinx-gallery

* install full suite of pvlib dependencies

* remove 'warnings as errors' flag

* return standard tests to azure-pipelines.yml

* fix job spacing

* add to what's new

* remove unused doc.yml config

* use requirements-py38.yml for docbuilding

* remove conda environment

* more conda removal

* specify python 3.8

* additional cleanup

* test docs before publish, rename env build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -181,6 +181,22 @@ jobs:
       reportDirectory: '$(System.DefaultWorkingDirectory)/**/htmlcov'
 
 
+- job: DocTest
+  pool:
+    vmImage: 'ubuntu-16.04'
+  steps:
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.8'
+  - script: |
+      pip install -e .[all]
+    displayName: Install pvlib[all] for doc build
+  - script: |
+      cd docs/sphinx/
+      sphinx-build -j auto -b html -d _build/doctrees source build
+    displayName: Build HTML docs
+
+
 - job: 'Publish'
   dependsOn: 'Test_conda_linux'
   pool:
