--- a/ci/requirements-py35.yml
+++ b/ci/requirements-py35.yml
@@ -12,7 +12,7 @@ dependencies:
     - numpy
     - pandas
     - pip
-    - pytables  # tables when using pip+PyPI
+    - pytables # tables when using pip+PyPI
     - pytest
     - pytest-cov
     - pytest-mock
@@ -21,10 +21,11 @@ dependencies:
     - pytz
     - requests
     - scipy
-    - shapely  # pvfactors dependency
-    - siphon  # conda-forge
+    - shapely # pvfactors dependency
+    - siphon # conda-forge
+    - timezonefinder
     - pip:
-        - nrel-pysam>=2.0
-        - pvfactors==1.0.1
-        - pytest-rerunfailures # conda version is >3.6
-        - pytest-remotedata # needs > 0.3.1
+          - nrel-pysam>=2.0
+          - pvfactors==1.0.1
+          - pytest-rerunfailures # conda version is >3.6
+          - pytest-remotedata # needs > 0.3.1
